package com.elekiwi.todobleta.core.presentation.util

object TestTags {
    //TodoListScreen
    const val ADD_TODO_FAB = "ADD_TODO_FAB"
    const val DELETE_TODO = "DELETE_TODO"

    //AddTodoScreen
    const val BACK_BUTTON = "BACK_BUTTON"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val DESCRIPTION_TEXT_FIELD = "DESCRIPTION_TEXT_FIELD"
    const val SAVE_BUTTON = "SAVE_BUTTON"

}